# SanKey

./: README.md
.github/workflows/: ci.yml
docs/: ea-license-delivery.md
mql/mqh/: SankeyDecoder.mqh
mql/samples/: sample_ea.mq4  sample_ea.mq5
native/: .gitattribute  .gitignore
native/sankey-decode/: CMakeLists.txt  build.bat
native/sankey-decode/include/: SankeyDecoder.h
native/sankey-decode/src/: SankeyDecoder.cpp
native/sankey-decode/tests/: test_decrypt.cpp
services/: .gitattributes  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
services/cdk/: cdk.json  package.json  tsconfig.json
services/cdk/lib/: license-service-stack.ts
services/cdk/test/: license-service-stack.test.ts
services/functions/api/: applications.ts
services/http-tests/: api.http
services/lambda/: package.json  tsconfig.json
services/lambda/src/handlers/: licenseGenerator.handler.ts
services/lambda/src/models/: licensePayload.ts
services/lambda/src/services/: encryption.ts
services/lib/: r2.ts
services/src/lib/: crypto.ts  db.ts  mail.ts  r2.ts
services/src/templates/: licenseEmail.md
services/tests/lib/: crypto.test.ts  mail.test.ts  r2.test.ts
web/: .gitignore  package.json  pnpm-lock.yaml  wrangler.toml
web/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/app/settings/: page.tsx
web/components/: animated-background.tsx  date-picker.tsx  geometric-background.tsx  main-nav.tsx  particles-background.tsx  simple-date-picker.tsx  theme-provider.tsx
(+8 files in other folders)
